[project]
name = "tsdbapi"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oliver Müller", email = "omueller@kof.ethz.ch" }
]
requires-python = ">=3.14"
dependencies = [
    "polars>=1.37.1",
    "requests-oauthlib>=2.0.0",
    "werkzeug>=3.1.3",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "kof"
url = "https://registry.kof.ethz.ch/repository/kpy/simple/"
publish-url = "https://registry.kof.ethz.ch/repository/kpy/"
explicit = true
