[project]
name = "tsdbapi"
version = "0.2.3"
description = "Interact with the KOF Time Series Database API"
readme = "README.md"
authors = [
    { name = "Oliver Müller", email = "omueller@kof.ethz.ch" }
]
requires-python = ">=3.14"
dependencies = [
    "polars>=1.37.1",
    "requests-oauthlib>=2.0.0",
    "werkzeug>=3.1.3",
]
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.urls]
Homepage = "https://github.com/KOF-ch/tsdbapi-py"
Issues = "https://github.com/KOF-ch/tsdbapi-py/issues"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "kof"
url = "https://registry.kof.ethz.ch/repository/kpy/simple/"
publish-url = "https://registry.kof.ethz.ch/repository/kpy/"
explicit = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
explicit = true